1. Activity 만들기 Intro, Login, DailyQuestion, QuestionIndex, QuestionResult, Setting, CategorySetting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QNA">
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".QuestionIndexActivity" />
+        <activity android:name=".QuestionResultActivity" />
+        <activity android:name=".DailyQuestionActivity" />
+        <activity android:name=".CategorySettingActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".IntroActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
