--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,16 @@
         <activity android:name=".SettingActivity"></activity>
         <activity android:name=".QuestionIndexActivity" />
         <activity android:name=".QuestionResultActivity" />
-        <activity android:name=".DailyQuestionActivity" />
+        <activity android:name=".DailyQuestionActivity">            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
         <activity android:name=".CategorySettingActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".IntroActivity" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
